# VaultVoice

./: README.md
.github/workflows/: desktop-distribution.yml  release-desktop.yml
apps/desktop/: README.md
apps/desktop/src/vaultvoice_desktop/: __init__.py  app.py  app_controller.py  hud.py  shortcuts.py
apps/desktop/tests/: __init__.py  test_app.py  test_app_controller.py  test_hud.py  test_shortcuts.py
apps/local-service/: pyproject.toml
apps/local-service/benchmarks/: baseline_results.json  dataset_manifest.json  run_benchmark.py
apps/local-service/src/vaultvoice_service/: __init__.py  audio_pipeline.py  benchmarks_cli.py  logging_utils.py  models.py  observability.py  profile.py  provider.py  retention.py  service.py
apps/local-service/tests/: __init__.py  test_audio_pipeline.py  test_logging_utils.py  test_observability.py  test_provider.py  test_retention.py
docs/: MVP_IMPLEMENTATION_TICKETS.md  PRD.md  desktop-distribution.md  engineering-standards.md  onboarding-macos-mic-permissions.md  onboarding-shortcuts.md  privacy-model.md  release-checklist.md  stt-baseline.md
scripts/: run-benchmark.sh  run-local-checks.sh
