[project]
name = "vaultvoice-local-service"
version = "0.1.0"
description = "Local transcription service scaffold for VaultVoice"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vaultvoice-benchmark = "vaultvoice_service.benchmarks_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
